--- a/wiki/CR_StyleNinja.wiki
+++ b/wiki/CR_StyleNinja.wiki
@@ -31,17 +31,34 @@ The following rules are implemented at this time:
    * Properties
    * Delegates
    * Events
- * SA1300 - Namespace, Class, Structure, Enum, Delegate, Event, Method and Property names must begin with an uppercase character.
- * SA1302 - Interface names must begin with I
- * SA1304 - NonPrivate Readonly fields must begin with an uppercase character
- * SA1305 - Field names must not use Hungarian Notation.
- * SA1306 - Internal Field names must begin with a lowercase character
- * SA1307 - External Field names must begin with an uppercase character
- * SA1308 - Variable names must not be prefixed {{{s_}}} or {{{m_}}}
- * SA1309 - Field names should not begin with {{{_}}}
- * SA1310 - Field names should not contain {{{_}}}
-
+ * SA11XX - Readability
+    * SA1100 - Do not prefix calls with Base or MyBase unless a local implementation exists.
+    * SA1101 - Prefix local calls this or Me.
+ * SA13XX - Naming
+   * SA1300 - Namespace, Class, Structure, Enum, Delegate, Event, Method and Property names must begin with an uppercase character.
+   * SA1302 - Interface names must begin with I
+   * SA1304 - NonPrivate Readonly fields must begin with an uppercase character
+   * SA1305 - Field names must not use Hungarian Notation.
+   * SA1306 - Internal Field names must begin with a lowercase character
+   * SA1307 - External Field names must begin with an uppercase character
+   * SA1308 - Variable names must not be prefixed {{{s_}}} or {{{m_}}}
+   * SA1309 - Field names should not begin with {{{_}}}
+   * SA1310 - Field names should not contain {{{_}}}
+ * SA14XX - Maintainability
+    * SA1400 - Access Modifier Must Be Declared.
+    * SA1401 - Fields must be Private
+    * SA1402 - (Partial) Files must only contain a single Class
+    * SA1403 - (Partial) Files must only contain a single Namespace
+    * SA1404 - (No fix Possible) SuppressMessage attribute does not include a justification
+    * SA1405 - (No fix Possible) Debug.Assert does not include a message
+    * SA1406 - (Impossible Rule) Debug.Fail() does not specify a descriptive message
+    * SA1409 - Remove Unnecessary Code
+ * SA15XX - Layout
+    * SA1507 - Multiple Blank Lines are Bad.
 = History = 
+ * Build 1342 - New rules implemented.
+   * Readability rules - SA1101 and SA1100
+   * Layout rule - SA1507.
  * Build 940 
    * Code reduced through more Refactoring. Less to maintain FTW! 
  * Build 928  
