--- a/wiki/RoryBecker.wiki
+++ b/wiki/RoryBecker.wiki
@@ -5,7 +5,7 @@ My name is Rory Becker. I am the original founder of this site and I am responsi
 
 
 == Plugins ==
-Here are some links to some of the plugins I have written:
+Here are some links to some of the plugins I have written or contributed to:
 <table border="0">
 <tr>
 <td valign="Top">
