--- a/wiki/CR_EasyGoto.wiki
+++ b/wiki/CR_EasyGoto.wiki
@@ -1,5 +1,9 @@
 #summary Plugin allows to jump between various places within a class and its base classes with ease.
 
+[http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_EasyGoto/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]
+[http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
+[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
+
 = Introduction =
 
 There are similar behaviors provided by default but some of them forces me to be in some places in order make them work. This plugin allows to jump in many places without such restrictions. Of course it uses markers so you can go back in any time just by pressing your collect marker key. Currently the plugin was designed and tested to work under with C#.
@@ -12,4 +16,4 @@ http://www.virgotech.pl/wp-content/uploads/2010/08/EasyGoto_02.png
 
 = Credits =
 
-Author: Krzysztof Blacha
+Krzysztof Blacha - You can contact me at krzysztof.blacha@gmail.com
