Edited wiki page through web user interface.

--- a/wiki/CR_ClassCleaner.wiki
+++ b/wiki/CR_ClassCleaner.wiki
@@ -10,7 +10,7 @@ The !ClassCleaner plugin features the ability to:
  * Remove regions (rids the class of regions)
 === Configuration ===
  # Add the assembly to your plugins folder – “!DevExpress\IDE Tools\Community\!PlugIns”
- # Start Visual Studio and select “DevExpress>Options” from the top menu strip then navigate to “IDE\ShortCuts”.
+ # Start Visual Studio and select “!DevExpress>Options” from the top menu strip then navigate to “IDE\ShortCuts”.
  # First I recommend creating a folder under “Code” called “Custom” and then within that “!ClassCleaner”. The commands that need shortcuts are:
   * !OrganizeWithRegions
   * !OrganizeWORegions
@@ -26,12 +26,12 @@ The !ClassCleaner plugin features the ability to:
   * !OrganizeWithRegions: ctrl+shift+alt+L
   * !OrganizeWORegions: ctrl+shift+alt+O
   * !SelectCurrentMember ctrl+P
-  * !!CutCurrentMember ctrl+shift+P
- # For each shortcut make sure “Use” is set to “InClass” which is located at “Editor/Code/!InClass”.
+  * !CutCurrentMember ctrl+shift+P
+ # For each shortcut make sure “Use” is set to “!InClass” which is located at “Editor/Code/!InClass”.
 === Usage ===
 The next step is to open a class file, put your cursor inside the class, and press ctrl+shift+alt+L or ctrl+shift+alt+O to organize the file.  To test out “!RemoveWhitespace”: open a class file, inside the class hit “Enter” five times, and then press ctrl+shift+alt+L.  To test out “!RemoveRegions”: open a class file that contains regions, place the cursor inside the class, and press ctrl+shift+alt+I.
 NOTE:  As stated above your cursor must be inside the class.
-What and which order !ClassCleaner organizes a class is configurable.  Navigate to “DevExpress>Options” on the top menu strip.   Next go to “Editor/!ClassCleaner” to view the configuration.
+What and which order !ClassCleaner organizes a class is configurable.  Navigate to “!DevExpress>Options” on the top menu strip.   Next go to “Editor/!ClassCleaner” to view the configuration.
   
 [http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ClassCleaner/Screenshots/ClassCleanerOptions.jpg]
 
