--- a/wiki/Refactor_ConvertToXPOProperty.wiki
+++ b/wiki/Refactor_ConvertToXPOProperty.wiki
@@ -6,7 +6,7 @@
 
 = Introduction =
 
-This plugin allow to convert auto property of any type into XPO property. It can be often used in scenario when classed which were previously serialized are now stored using XPO. Currently the plugin was designed and tested to work under C#.
+This plugin allow to convert auto property of any type into XPO property. It can be often used in scenario when classed which were previously serialized are now stored using XPO. It also supports delayed properties so you can easily convert from a auto property to delayed property and also from XPO property to an delayed property. Currently the plugin was designed and tested to work under C#.
 
 == Sample ==
 
@@ -39,6 +39,54 @@ public class Bar : XPObject
 }
 }}}
 
+The updated version also supports delayed properties so you can convert this:
+
+{{{
+public class Bar : XPObject
+{
+    private string _Message;
+    public string Message
+    {
+        get
+        {
+            return _Message;
+        }
+        set
+        {
+            SetPropertyValue("Message", ref _Message, value);
+        }
+    }
+}
+}}}
+
+or this
+
+{{{
+public class Bar : XPObject
+{
+    public string Message { get; set; }
+}
+}}}
+
+Into that:
+
+{{{
+public class Bar : XPObject
+{
+    public string Message
+    {
+        get
+        {
+            return GetDelayedPropertyValue("Message");
+        }
+        set
+        {
+            SetDelayedPropertyValue("Message", value);
+        }
+    }
+}
+}}}
+
 = Usage =
 
 http://www.virgotech.pl/wp-content/uploads/2010/08/ConvertToXPoProp_01.png
@@ -46,6 +94,11 @@ http://www.virgotech.pl/wp-content/uploads/2010/08/ConvertToXPoProp_01.png
 http://www.virgotech.pl/wp-content/uploads/2010/08/ConvertToXPoProp_02.png
 
 http://www.virgotech.pl/wp-content/uploads/2010/08/ConvertToXPoProp_03.png
+
+= History =
+
+  * 15.08.2010 - First version released to public.
+  * 26.08.2010 - I've added support for delayed properties.
 
 = Credits =
 
