--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -47,6 +47,7 @@
     * [UnitTestErrorVisualizer]
   * Developer Plugins
     * [DX_ContextLab]
+    * [Impromptu]
   * XPO Plugins
     * [XPO_EasyFields]
   * Misc Plugins
